--- a/assets/scss/_default/single.scss
+++ b/assets/scss/_default/single.scss
@@ -1,518 +1,49 @@
+@import '../common-styles/logo';
+@import '../common-styles/pictures';
+@import '../common-styles/pagetitles';
+@import '../common-styles/tables';
+@import '../common-styles/markdown';
+
 @include themify($themes) {
   .single {
-        background-color: themed("website-background");
-        font-size: 18px;
-        font-family: $font-family;
-
-        p {
-            font-size: 18px;
-            text-align: justify;
-            padding-top: 10px;
-            // margin-bottom: 10px;
-        }
-
-        .single-contents {
-          // padding-left: 30px;
-          // padding-right: 30px;
-          background: linear-gradient(to bottom, themed(logo-green), #FFFFFF);
-        }
-
-        .single-content {
-          max-width: var(--contents-width);
-          margin-left: var(--contents-margin);
-          background-color: themed(website-background);
-          padding: 10px 10px;
-        }
-
-        .single-logo {
-            z-index: 2;
-            position: absolute;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: $logo-width;
-            height: $logo-height;
-            margin-left: $logo-left-margin;
-            background-color: themed("background-logo-white");
-            border: 1px solid themed("logo-green");
-        }
-    
-        .logo {
-            width: 90%;
-            height: auto;
-            display: block;
-        }
-
-        .single-logo {
-          transition: transform 0.15s ease, box-shadow 0.15s ease;
-        }
-    
-        .single-logo:hover {
-            transform: scale(1.05);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-        }
-        
-        .logo-klein {
-            height: auto;
-            width: 90%;
-            display: none;
-        }
-
-        .single-picture {
-            height: calc(var(--viewable-height) / 1.9);
-            position: relative;
-          }
-
-        .single-picture-main {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-
-        .single-pagetitle {
-            position: absolute;
-            text-align: center;
-            padding-left: 2.5%;
-            // margin: 0 0 0 0;
-            // margin-left: 0px;
-            top: $logo-height + 10px;
-            width: calc(100% - 60px);
-            font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-            font-weight: 400;
-            font-stretch: bolder;
-            font-style: normal;
-            font-size: calc(var(--viewable-height) / 8);
-            opacity: 80%;
-            color: themed("logo-yellow");
-            text-shadow: 
-                -1px -1px 0 black, /* Oben links */
-                1px -1px 0 black, /* Oben rechts */
-                -1px  1px 0 black, /* Unten links */
-                1px  1px 0 black; /* Unten rechts */
-        }
-
-        .single-author {
-            text-align: end;
-            padding: 0 10px;
-            // border-color: themed("text-black");
-            // border-width: 1px;
-            // border-style: solid;
-        }
-
-        .single-date {
-            text-align: end;
-            padding: 0 10px 10px 10px;
-        }
-        h2 {
-            padding-top: 30px;
-        }
-        h3 {
-            padding-top: 20px;
-        }
-        h4 {
-          padding-top: 20px;
-        }
-
-        .div-small-img {
-          display: flex;
-          flex-wrap: wrap;
-          gap: 0px 12px;
-          justify-content: center; /* Horizontales Zentrieren */
-          text-align: center;
-          align-items: center;
-        }
-
-        input, select {
-          background-color: themed(website-background);
-          text-align: left;
-          border-radius: 3px;
-          padding: 5px;
-          border: 1px solid themed(table-line);
-          font-size: 18px;
-          width: 90%;
-          color: themed(logo-green);
-        }
-
-        select {
-          width: 150px;
-        }
-
-        button {
-          border: none;
-          text-align: center;
-          font-size: 18px;
-          padding: 10px;
-          background-color: themed(logo-green);
-          border-radius: 3px;
-          border: 1px solid themed(logo-green-60);
-          color: themed(text-white);
-          cursor: pointer;
-        }
-  
-        button:hover {
-          transform: scale(1.01);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-        }
-
-        .img-div {
-          display: block;
-          justify-content: center; /* Horizontales Zentrieren */
-          text-align: center;
-          align-items: center;
-
-          .small-img {
-            height: 50vh;
-            width: auto;
-          }
-        }
-
-        .smallest-img-in-text {
-          float: left;
-          margin: 10px 10px 10px 0; /* Abstand um das Bild */
-          height: 120px;
-          width: auto;
-        }
-
-        /* Verstecke die Checkbox */
-        input[type="checkbox"] {
-            display: none;
-        }
-        
-        /* Standard-Bild */
-        label img {
-            width: var(--image-width);
-            margin-top: 10px;
-            border-color: themed(table-line);
-            border-width: 2px;
-            border-style: solid;
-            margin-bottom: 0;
-            transition: transform 0.3s ease, z-index 0.3s;
-            cursor: pointer;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        
-        /* Bei aktivierter Checkbox: Vergrößern und zentrieren */
-        input[type="checkbox"]:checked + label img {
-            position: fixed;
-            top: 0px;
-            left: 0px;
-            margin: 0px;
-            width: calc(100vw); /* Vollständige Breite des Viewports */
-            height: calc(100vh); /* Vollständige Höhe des Viewports */
-            object-fit: contain; /* Passt das Bild an, ohne Verzerrung */
-            z-index: 1000; /* Über andere Inhalte legen */
-            background-color: themed(website-background); /* Optional: Dunkler Hintergrund */
-            transition: all 0.3s ease; /* Weicher Übergang */
-            border: none;
-        }
-        
-        .imagemd-caption  {
-            display: block;
-            width: var(--image-width);
-            border-color: themed("logo-yellow-60");
-            border-width: 2px;
-            border-style: solid;
-            background-color: themed("logo-yellow-60");
-            padding: 5px 0px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            margin-left: var(--image-margin);
-        }
-
-        .combobox-details {
-          background-color: themed(website-background);
-          padding: 7px;
-          border: 1px solid themed(table-line);
-          cursor: pointer;
-          margin-top: 2px;
-          margin-bottom: 2px;
-          transition: transform 0.15s ease, box-shadow 0.15s ease;
-          &:hover {
-            transform: scale(1.002);
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-          }
-        }
-
-        .div-details {
-          margin-left: 15px;
-          margin-right: 15px;
-          padding-left: 5px;
-          padding-right: 5px;
-          border: 1px solid themed(table-line);
-        }
-
-        .patenschaft-container {
-          background-color: themed(website-background);
-          padding: 7px;
-          border: 5px solid themed(logo-red-60);
-          display: flex;
-          flex-wrap: wrap;
-          align-items: center;
-          //margin-right: 10px;
-          margin-top: 2px;
-          margin-bottom: 2px;
-          
-
-          img {
-            padding: 2px;
-          }
-
-          div {
-            padding: 10px;
-
-            p {
-              padding: 0px;
-            }
-          }
-
-          button {
-            margin-left: auto;
-          }
-        }
-
-        .patenschaft-container-versorgt {
-          border: 2px solid themed(logo-green-60);
-        }
-
-        .kleine-tabelle {
-            margin-top: 10px;
-            width: var(--image-width);
-            overflow-x: hidden;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin-left: var(--image-margin);
-            //background-color: themed(logo-yellow-30);
-          }
-          
-          .kleine-tabelle table {
-            width: 100%;
-            border-collapse: collapse;
-          }
-          
-          .kleine-tabelle thead,
-          .kleine-tabelle tbody tr {
-            display: table;
-            width: 100%; /* Gleiche Breite für Header und Body */
-            table-layout: auto; /* Konsistente Spaltenbreiten */
-          }
-
-          .kleine-tabelle thead {
-            margin-bottom: 5px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-          }
-
-          .kleine-tabelle thead th {
-            background: themed(logo-yellow-60);
-            padding: 5px 16px;
-            border-bottom: 0px solid themed(logo-yellow-60);
-            position: sticky;
-            top: 0; /* Fixiert die Kopfzeile */
-            z-index: 1;
-          }
-
-          .kleine-tabelle thead th:last-child {
-            text-align: right;
-            border: 2px solid themed(logo-yellow-60);
-            width: 120px;
-          }
-
-          .kleine-tabelle tbody {
-            display: block;
-            overflow: hidden;
-            border: 2px solid themed(table-line);
-          }
-          
-          .kleine-tabelle tbody td {
-            padding: 8px 16px;
-            border: 1px solid themed(table-line);
-            text-align: left;
-            vertical-align: middle;
-            background-color: themed(website-background-60);
-          }
-
-          .kleine-tabelle tbody td:last-child {
-            text-align: right;
-            vertical-align: middle;
-            width: 120px;
-          }
-
-        .finanzen-tabelle {
-            margin-top: 10px;
-            width: var(--image-width);
-            overflow-x: hidden;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin-left: var(--image-margin);
-          }
-          
-          .finanzen-tabelle table {
-            width: 100%;
-            border-collapse: collapse;
-          }
-          
-          .finanzen-tabelle thead,
-          .finanzen-tabelle tbody tr {
-            display: table;
-            width: 100%; /* Gleiche Breite für Header und Body */
-            table-layout: fixed; /* Konsistente Spaltenbreiten */
-          }
-          .finanzen-tabelle thead {
-            margin-bottom: 5px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-          }
-
-          .finanzen-tabelle thead th {
-            background: themed(logo-yellow-60);
-            padding: 5px 16px;
-            border-bottom: 2px solid themed(logo-yellow-60);
-            position: sticky;
-            top: 0; /* Fixiert die Kopfzeile */
-            z-index: 1;
-          }
-          
-          .finanzen-tabelle thead th:first-child {
-            // text-align: right;
-            border: 2px solid themed(logo-yellow-60);
-            width: 100px;
-          }
-
-          .finanzen-tabelle thead th:last-child {
-            // text-align: right;
-            border: 2px solid themed(logo-yellow-60);
-            width: 120px;
-          }
-
-          .finanzen-tabelle tbody {
-            border: 2px solid themed(table-line);
-            display: block;
-            max-height: 384px; /* Scrollbare Höhe */
-            overflow-y: auto; /* Vertikale Scrollbar */
-            overflow-x: hidden;
-          }
-          
-          .finanzen-tabelle tbody td {
-            padding: 4px 16px;
-            border: 1px solid themed(table-line);
-            text-align: left;
-            vertical-align: middle;
-            background-color: themed(website-background);
-          }
-          
-          .finanzen-tabelle tbody td:first-child {
-            text-align: center;
-            vertical-align: middle;
-            width: 100px;
-          }
-
-          .finanzen-tabelle tbody td:last-child {
-            text-align: right;
-            vertical-align: middle;
-            width: 120px;
-          }
+    .single-date-author {
+      padding: 0 10px 10px 0px;
+      text-align: end;
     }
 
-    @media (max-width: 900px) {
-      .single .single-pagetitle {
-          font-size: calc(var(--viewable-height) / 12);
-      }
+    // Background gradient
+    .single-contents {
+      background: linear-gradient(to bottom, themed(logo-green), themed(website-background));
     }
 
-    @media (max-width: 500px) {
-      .single .single-pagetitle {
-          font-size: calc(var(--viewable-height) / 20);
-      }
+    // Content
+    .single-content {
+      max-width: var(--contents-width);
+      margin-left: var(--contents-margin);
+      background-color: themed(website-background);
+      padding: 10px 10px;
     }
 
-    @media (max-width: 400px) {
-      .single .single-pagetitle {
-          font-size: calc(var(--viewable-height) / 30);
-      }
+    // General settings
+    background-color: themed("website-background");
+    font-family: $font-family;
+    font-size: $font-size;
+
+    h2 {
+      padding-top: 30px;
     }
 
-    @media (max-width: 300px) {
-      .single .single-pagetitle {
-          font-size: calc(var(--viewable-height) / 40);
-      }
+    h3 {
+      padding-top: 20px;
     }
 
-    @media (max-width: 500px) {
-        .single .single-logo {
-            width: $logo-klein-width;
-        }
-    
-        .single .logo {
-            display: none;
-        }
-
-        .single .logo-klein {
-            display:inline;
-        }
+    h4 {
+      padding-top: 20px;
     }
-    
-    
-   @media (max-width: 600px) {
-        .finanzen-tabelle table,
-        .finanzen-tabelle thead,
-        .finanzen-tabelle tbody,
-        .finanzen-tabelle tr,
-        .finanzen-tabelle td,
-        .finanzen-tabelle th {
-          display: block; /* Tabellenstruktur wird aufgelöst */
-          width: 100%;
-          box-sizing: border-box;
-          text-align: left;
-        }
-      
-        .finanzen-tabelle thead {
-          display: none; /* Header ausblenden */
-        }
-      
-        .finanzen-tabelle tr {
-          margin-bottom: 0px; /* Abstand zwischen Zeilen */
-        }
-      
-        .finanzen-tabelle td {
-          position: relative;
-          padding-left: 50%; /* Platz für das Label */
-        }
-      
-        .finanzen-tabelle td::before {
-          content: attr(data-label); /* Spaltenüberschrift aus Attribut */
-          position: absolute;
-          left: 16px;
-          width: 45%; /* Platz für das Label */
-          font-weight: bold;
-        }
 
-        .single .finanzen-tabelle tbody td:first-child {
-          width:auto;
-          border-bottom: 0;
-          text-align: left;
-        }
-
-        .single .finanzen-tabelle tbody td:last-child {
-          width:auto;
-          border-top: 0;
-          border-bottom: 3px solid themed(logo-yellow-60);
-          text-align: left;
-        }
-
-        .single .finanzen-tabelle thead th {
-          border-bottom: 0;
-        }
-
-        .single .finanzen-tabelle thead th:first-child {
-          width:auto;
-          border-bottom: 0;
-          border-top: 0;
-          text-align: left;
-        }
-
-        .single .finanzen-tabelle thead th:last-child {
-          width:auto;
-          border-bottom: 0;
-          border-top: 0;
-          text-align: left;
-        }
-   }
+    p {
+      // text-align: justify;
+      padding-top: 10px;
+    }
+  }
 }
-
