--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,15 +1,17 @@
 {{ define "main" }}
-  <div id = "js-single" class="dark-theme">
-    <div class="single">
-      <a href="/" class="single-logo">
-        <img class="logo" src="/img/logo.png" alt="Haus der Sonne">
-        <img class="logo-klein" src="/img/logo-klein.png" alt="Haus der Sonne">
+  <div id = "js-theme" class="dark-theme">
+    <div id = "js-single" class="single">
+      <a href="/" class="logo">
+        <img class="img-logo" src="/img/logo.png" alt="Haus der Sonne">
+        <img class="img-logo-klein" src="/img/logo-klein.png" alt="Haus der Sonne">
       </a>
-      <div class="single-picture">
-        <img src="{{ .Params.image }}" alt="Single Picture" class="single-picture-main">
+      <div class="pagepicture">
+        <img src="{{ .Params.image }}" alt="Single Picture" class="img-pagepicture">
       </div>
       <div class="single-contents">
-        <h1 class="single-pagetitle">{{ .Title }}</h1>
+        <div class="pagetitle">
+          <h1 class="header-pagetitle">{{ .Title }}</h1>
+        </div>
         <div class="single-date-author">
           <div class="single-author">
               {{if .Params.author}}Author: {{.Params.Author}}{{end}}
@@ -27,9 +29,13 @@
 {{ end }}
 
 {{ define "scripts" }}
+  <!-- <script type="module" src="/js/darkmode.js"></script> -->
   <script>
-    // Dark mode    
-    var jsSingle = document.getElementById("js-single");
+  // import { addTheme } from "/js/darkmode.js";
+
+    //Dark mode
+    //addTheme();  
+    var jsSingle = document.getElementById("js-theme");
     if (localStorage.getItem("darkMode") == "true") {
       jsSingle.className = "light-theme";
     } else {
@@ -66,13 +72,12 @@
       if (contentsWidth >= 600 + immagePadding) {
         imageWidth = 600;
       }
-      console.log(imageWidth);
       
-      document.documentElement.style.setProperty('--image-width', `${imageWidth}px`);
+      document.documentElement.style.setProperty('--image-width', `${imageWidth}px`);      
+      document.documentElement.style.setProperty('--table-width', `${imageWidth}px`);
       const imageMargin = Math.max((contentsWidth- imageWidth) / 2, 0);
-      console.log(contentsWidth);
-      console.log(imageMargin);
       document.documentElement.style.setProperty('--image-margin', `${imageMargin-1}px`);
+      document.documentElement.style.setProperty('--table-margin', `${imageMargin-1}px`);
     }
 
     window.addEventListener('resize', updateMargins);
