--- a/layouts/partials/common/header.html
+++ b/layouts/partials/common/header.html
@@ -7,9 +7,9 @@
                 <a href="" id="js-fr" class="header-gray-item">FR</a>
                 <a href="" class="header-gray-item"><i id="js-darkMode" class="fas fa-sun"></i></a>
             </nav>
-            <a href="/" class="header-logo">
-                <img class="logo" src="/img/logo.png" alt="Haus der Sonne">
-                <img class="logo-klein" src="/img/logo-klein.png" alt="Haus der Sonne">
+            <a href="/" class="logo">
+                <img class="img-logo" src="/img/logo.png" alt="Haus der Sonne">
+                <img class="img-logo-klein" src="/img/logo-klein.png" alt="Haus der Sonne">
             </a>
             {{ partial "common/megamenu" }}
             <div class="header-donate-paypal">
