--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -63,7 +63,7 @@
                                     <a href="Versorgung/EineWarmeMahlzeit">{{ T "wwDOneMeal" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "wwDCleanWater" }}</a>
+                                    <a href="Versorgung/BrunnenbauAktuell">{{ T "wwDCleanWater" }}</a>
                                 </li>
                                 <li>
                                     <a href="#">{{ T "wwDMedicine" }}</a>
