--- a/assets/scss/globals.scss
+++ b/assets/scss/globals.scss
@@ -14,6 +14,9 @@
         padding: 0;
         margin: 0;
         //font-family: $font-family;
+        // font-size: 18px;
+        // text-align: justify;
+        // padding-top: 10px;
     }
 
     a  {
