--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -11,10 +11,13 @@ $logo-width: 350px;
 $logo-klein-width: 130px;
 $logo-height: 120px;
 $logo-left-margin: 20px;
+$picture-home-pct-height: 100;
+$picture-pct-height: 53;
 
 // ********** Colors
 // Global
 $font-family: 'Calibri', sans-serif;
+$font-size: 18px;
 $themes: (
   light: (
     text-white: white,
@@ -22,26 +25,13 @@ $themes: (
     text-main-menu: white,
     background-logo-white: white,
     table-line: grey,
-    // background-beige: beige,    
-    // background-opaque: rgb(121, 134, 109),
-    //logo-green: rgba(8,129,98, 1),
     logo-green: rgb(0, 122, 94),
     logo-green-60: rgba(0, 122, 94, 0.6),
-    // logo-yellow: rgba(254, 209, 10, 1),
     logo-yellow: rgb(252, 209, 22),
     logo-yellow-60: rgba(252, 209, 22, 0.6),
     logo-yellow-30: rgba(252, 209, 22, 0.3),
-    // logo-green-transparent: rgba(8,129,98, 0.2),
-    // logo-yellow-transparent: rgba(254, 209, 10, 0.2),
-    // logo-red: rgba(209,18,39,1),
     logo-red: rgb(206, 17, 38),
     logo-red-60: rgba(206, 17, 38, 0.6),
-    // website-background: rgba(204, 202, 195, 1),
-    //website-background: rgb(209, 228, 209),
-    // website-background: rgb(208, 170, 174),
-    // website-background: rgb(252, 252, 211),
-    //  website-background: white,
-    // website-background: rgb(44, 10, 10),
     website-background: rgb(227, 226, 212),
     footer-background: rgba(8,129,98, 1),
   ),
@@ -52,8 +42,6 @@ $themes: (
     background-logo-white: rgb(185, 182, 149),
     logo-green: rgb(3, 44, 34),
     logo-yellow: rgb(83, 69, 4),
-    // logo-green-transparent: rgb(3, 44, 34),
-    // logo-yellow-transparent: rgb(83, 69, 4),
     logo-red: rgb(115, 11, 23),
     website-background: rgb(87, 86, 81),
     footer-background: rgb(3, 44, 34),
