--- a/layouts/partials/common/header.html
+++ b/layouts/partials/common/header.html
@@ -15,9 +15,9 @@
             <div class="header-donate-paypal">
                 <!-- <button>Direkt über Paypal spenden</button> -->
                 <form action="https://www.paypal.com/donate" method="post" target="_top">
-                    <input type="hidden" name="hosted_button_id" value="JVEF3JGFNK2ML" />
-                    <input type="image" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Spenden mit dem PayPal-Button" />
-                    <img alt="" border="0" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1" height="1" />
+                    <input class="donate-paypal-hosted" type="hidden" name="hosted_button_id" value="JVEF3JGFNK2ML" />
+                    <input class="donate-paypal-image" type="image" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Spenden mit dem PayPal-Button" />
+                    <img class="donate-paypal-img" alt="" border="0" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1" height="1" />
                 </form>
             </div>    
         </div>
