--- a/assets/scss/common-styles/pictures.scss
+++ b/assets/scss/common-styles/pictures.scss
@@ -1,4 +1,8 @@
 @include themify($themes) {
+
+    // *******************************************************
+    // ** Page Picture
+    // *******************************************************
     .pagepicture {
         height: calc(var(--viewable-height) * #{$picture-pct-height} / 100);
         position: relative;
@@ -7,6 +11,61 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+    }
+
+    // *******************************************************
+    // ** Swiper für markdown pictures
+    // *******************************************************
+    .swiper-container {
+        height: 500px;
+        width: auto;
+        overflow: hidden;
+        margin: 10px;
+        padding: 2px;
+        position: relative;
+
+        .swiper-pagination {
+            position: absolute;
+            bottom: 10px;
+            width: 100%;
+            text-align: center;
+        }
+
+        .swiper-pagination-bullet {
+            width: 12px;
+            height: 12px;
+            margin: 0 5px;
+            background-color: themed(logo-yellow-60);
+            border-radius: 50%;
+            opacity: 0.5;
+            transition: opacity 0.3s ease;
+        }
+
+        .swiper-pagination-bullet-active {
+            background-color: themed(logo-yellow);
+            opacity: 1;
+        }
+
+        .swiper-button-prev,
+        .swiper-button-next {
+            opacity: 0;
+        }
+
+        .swiper-slide {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .swiper-slide img {
+            height: 100%;
+            width: auto;
+            object-fit: contain;
+            border-color: themed(table-line);
+            border-width: 2px;
+            border-style: solid;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
     }
 }
