--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -29,9 +29,29 @@
 {{ end }}
 
 {{ define "scripts" }}
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
+
   <!-- <script type="module" src="/js/darkmode.js"></script> -->
   <script>
   // import { addTheme } from "/js/darkmode.js";
+    const swiper = new Swiper('.swiper-container', {
+        loop: true, // Endloses Swipen
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+        slidesPerView: 1, // Ein Bild pro Swipe
+    });
+
+    // Fancybox initialisieren
+    Fancybox.bind("[data-fancybox]", {
+      // Fancybox-Optionen hier
+    });
 
     //Dark mode
     //addTheme();  
